Fix typos inside doc/locale/

--- a/doc/locale/ja/LC_MESSAGES/contribution/development/test.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/development/test.po
@@ -52,7 +52,7 @@ msgstr ""
 msgid "libmemcachedのインストール"
 msgstr ""
 
-msgid "memcachedのバイナリプロトコルのテストを動作させるためには、libmemcachedの導入が必要です。squeeze以降のDebianやKarmic以降のUubntuでは以下の用にしてインストールできます。::"
+msgid "memcachedのバイナリプロトコルのテストを動作させるためには、libmemcachedの導入が必要です。squeeze以降のDebianやKarmic以降のUbuntuでは以下の用にしてインストールできます。::"
 msgstr ""
 
 msgid "テストの動作"
