--- a/doc/locale/ja/LC_MESSAGES/news/3.po
+++ b/doc/locale/ja/LC_MESSAGES/news/3.po
@@ -37,7 +37,7 @@ msgstr "[doc] ロックタイムアウトについての説明を追加しまし
 msgid "Enabled ``GRN_JA_SKIP_SAME_VALUE_PUT`` by default. In the previous releases, the value of this configuration is 'no'. This change affects reducing the size of Groonga database."
 msgstr "``GRN_JA_SKIP_SAME_VALUE_PUT`` をデフォルトで有効にしました。以前のバージョンまでは、この設定は 'no' となっていました。この変更により、Groongaのデータベースのサイズの増加を抑制できます。"
 
-msgid "Supported multiple indexes including a nested index and multiple keywords query. This change improves missing search results isssue when narrowing down by multiple keywords query."
+msgid "Supported multiple indexes including a nested index and multiple keywords query. This change improves missing search results issue when narrowing down by multiple keywords query."
 msgstr "ネストしたインデックスと複数のキーワードを含むクエリに対するインデックスを使えるようにしました。この変更で複数のキーワードで絞り込んだときに検索結果が欠落していた問題が改善します。"
 
 msgid "Added API to customize normalizer for snippet."
@@ -214,7 +214,7 @@ msgstr "[実験的] \"ruby_load\" コマンドを追加しました。"
 msgid "[httpd] Supported multiple buffered body of POST request. The load command caused timeout in such a case. [GitHub #120] [Patch by Motoi Washida]"
 msgstr "[httpd] メッセージボディが複数バッファリングされているPOSTリクエストをサポートしました。そのような場合にこれまではタイムアウトしていました。 [GitHub#120] [鷲田さんがパッチを提供]"
 
-msgid "[gqtp] Supported error message. The body is changed to return raw text insted of double quoted text. This is incompatible changes."
+msgid "[gqtp] Supported error message. The body is changed to return raw text instead of double quoted text. This is incompatible changes."
 msgstr "[gqtp] エラーメッセージをサポートしました。メッセージボディとしてテキストを二重引用符で囲むことなく返します。これは非互換な変更です。"
 
 msgid "[http] Supported \"400 Bad request\" for invalid argument error."
@@ -337,7 +337,7 @@ msgstr "[httpd] ``groonga_log_level`` ディレクティブをサポートしま
 msgid "[httpd] Supported customizing cache limit as ``groonga_cache_limit`` directive."
 msgstr "[httpd] ``groonga_cache_limit`` ディレクティブをサポートしました。"
 
-msgid "Fixed a bug that error in expression may cause stack overflow. This change avoids that groonga crashes suddenly as a result of error accumlation."
+msgid "Fixed a bug that error in expression may cause stack overflow. This change avoids that groonga crashes suddenly as a result of error accumulation."
 msgstr "式のエラーによってスタックオーバーフローを引き起す可能性のある不具合を修正しました。この変更はエラーが積み重なって突然groongaがクラッシュするのを防ぎます。"
 
 msgid "Fixed a crash bug that offline index construction for vector column which has orphan reference causes."
@@ -589,7 +589,7 @@ msgstr "``X += Y``, ``X -= Y``, ``X *= Y``, ``X /= Y``, ``X %= Y``, ``X <<= Y``,
 msgid "Supported unary operations such as ``-X`` for Int8, UInt8, Int16, UInt16 and UInt64."
 msgstr "``-X`` といった演算子をInt8, UInt8, Int16, UInt16 や UInt64に対してもサポートしました。"
 
-msgid "Supported complex string concatination in ``--output_columns``. For example, you can use a query such as ``--output_columns '\"<\" + title + \">\"'``."
+msgid "Supported complex string concatenation in ``--output_columns``. For example, you can use a query such as ``--output_columns '\"<\" + title + \">\"'``."
 msgstr "``--output_columns`` で複雑な文字列の連結をサポートしました。例えば ``--output_columns '\"<\" + title + \">\"'`` といったクエリを書けるようになりました。"
 
 msgid "Added the information of the repository of groonga to development page."
