--- a/doc/locale/ja/LC_MESSAGES/reference/functions/highlight.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/functions/highlight.po
@@ -46,14 +46,14 @@ msgstr "10.0.6より前のバージョンでは、 ``highlight`` は :doc:`/refe
 msgid "``highlight`` requires :doc:`/reference/command/command_version` 2 or later."
 msgstr "``highlight`` は :doc:`/reference/command/command_version` 2 以降で使えます。"
 
-msgid "The following example uses HTML escape and normalzier is ``NormalizeAuto``. It specifies the tags ``<span class=\"keyword1\">`` and ``</span>`` of the keyword ``groonga``, and the tags ``<span class=\"keyword2\">`` and ``</span>`` of the keyword ``mysql``."
+msgid "The following example uses HTML escape and normalizer is ``NormalizeAuto``. It specifies the tags ``<span class=\"keyword1\">`` and ``</span>`` of the keyword ``groonga``, and the tags ``<span class=\"keyword2\">`` and ``</span>`` of the keyword ``mysql``."
 msgstr "以下の例では、 HTMLエスケープを使い、 ノーマライザーには、``NormalizeAuto`` を使います。キーワード ``groonga`` は、タグに ``<span class=\"keyword1\">`` と ``</span>`` を 指定しキーワード ``mroonga`` には、タグに``<span class=\"keyword2\">`` と ``</span>`` を指定しています。"
 
 msgid "The text are scanned by the keywords for tagging after they are normalized by ``NormalizerAuto`` normalizer."
 msgstr "テキストは、 ``NormalizerAuto`` ノーマライザーによって正規化された後にタグ付けのためにスキャンされます。"
 
-msgid "``--query \"groonga mysql\"`` matches to the first record's body. ``highight`` surrounds the keywords ``groonga`` contained in the text with ``<span class=\"keyword1\">`` and ``</span>``, and the keywords ``mysql`` contained in the text with ``<span class=\"keyword2\">`` and ``</span>``."
-msgstr "``--query \"groonga mysql\"`` は最初のレコードにマッチします。``highight`` は、キーワード ``groonga`` を含むテキストを ``<span class=\"keyword1\">`` と ``</span>`` で囲い、キーワード ``mysql`` を含むテキストを ``<span class=\"keyword2\">`` と ``</span>`` で囲います。"
+msgid "``--query \"groonga mysql\"`` matches to the first record's body. ``highlight`` surrounds the keywords ``groonga`` contained in the text with ``<span class=\"keyword1\">`` and ``</span>``, and the keywords ``mysql`` contained in the text with ``<span class=\"keyword2\">`` and ``</span>``."
+msgstr "``--query \"groonga mysql\"`` は最初のレコードにマッチします。``highlight`` は、キーワード ``groonga`` を含むテキストを ``<span class=\"keyword1\">`` と ``</span>`` で囲い、キーワード ``mysql`` を含むテキストを ``<span class=\"keyword2\">`` と ``</span>`` で囲います。"
 
 msgid "Special characters such as ``<`` and ``>`` are escapsed as ``&lt;`` and ``&gt;``."
 msgstr "``<`` や ``>`` のような特殊文字は ``&lt;`` や ``&gt;`` としてエスケープされます。 "
