--- a/doc/locale/ja/LC_MESSAGES/reference/functions/highlight_full.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/functions/highlight_full.po
@@ -45,13 +45,13 @@ msgstr "10.0.6より前のバージョンでは、``highlight_full`` は :doc:`/
 msgid "``highlight_full`` requires :doc:`/reference/command/command_version` 2 or later."
 msgstr "``highlight_full`` を使うには :doc:`/reference/command/command_version` 2以降を使う必要があります。"
 
-msgid "The following example uses HTML escape and normalzier is ``NormalizeAuto``. It specifies the tags ``<span class=\"keyword1\">`` and ``</span>`` of the keyword ``groonga``, and the tags ``<span class=\"keyword2\">`` and ``</span>`` of the keyword ``mysql``."
+msgid "The following example uses HTML escape and normalizer is ``NormalizeAuto``. It specifies the tags ``<span class=\"keyword1\">`` and ``</span>`` of the keyword ``groonga``, and the tags ``<span class=\"keyword2\">`` and ``</span>`` of the keyword ``mysql``."
 msgstr "以下の例はHTMLエスケープを使用し、ノーマライザーに ``NormalizerAuto`` を指定しています。この例では キーワード ``groonga`` に ``<span class=\"keyword1\">``  と ``</span>`` のタグを指定し、キーワード ``mysql`` に ``<span class=\"keyword2\">`` と ``</span>`` のタグを指定しています。"
 
 msgid "The text are scanned by the keywords for tagging after they are normalized by ``NormalizerAuto`` normalizer."
 msgstr "キーワードとテキストは ``NormalizerAuto`` ノーマライザーで正規化されてタグ付けのためにスキャンされます。"
 
-msgid "``--query \"groonga mysql\"`` matches to the first record's body. ``highight_full`` surrounds the keywords ``groonga`` contained in the text with ``<span class=\"keyword1\">`` and ``</span>``, and the keywords ``mysql`` contained in the text with with ``<span class=\"keyword2\">`` and ``</span>``."
+msgid "``--query \"groonga mysql\"`` matches to the first record's body. ``highlight_full`` surrounds the keywords ``groonga`` contained in the text with ``<span class=\"keyword1\">`` and ``</span>``, and the keywords ``mysql`` contained in the text with with ``<span class=\"keyword2\">`` and ``</span>``."
 msgstr "``--query \"groonga mysql\"`` は最初のレコードにマッチします。 ``highlight_full`` は、テキスト中に含まれるキーワード ``groonga`` を ``<span class=\"keyword1\">`` と ``</span>`` で囲み、 キーワード ``mysql`` を ``<span class=\"keyword2\">`` と ``</span>`` で囲みます。"
 
 msgid "Special characters such as ``<`` and ``>`` are escapsed as ``&lt;`` and ``&gt;``."
