--- a/doc/locale/ja/LC_MESSAGES/reference/suggest/suggestion.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/suggest/suggestion.po
@@ -117,7 +117,7 @@ msgstr "以下のコマンドで上記の検索実行結果から学習します
 msgid "How to extract learning data"
 msgstr "学習データを抽出する方法"
 
-msgid "The learning data is stored into ``item_DATASET`` and ``pair_DATASET`` tables. By using select command for such tables, you can all extract learing data."
+msgid "The learning data is stored into ``item_DATASET`` and ``pair_DATASET`` tables. By using select command for such tables, you can all extract learning data."
 msgstr "学習データは、 ``item_DATASET`` テーブルと ``pair_DATASET`` テーブルに保存されています。このようなテーブルに対して、selectコマンドを使うことで、全ての学習データを抽出できます。"
 
 msgid "Here is the query to extract all learning data::"
