fix the release content because float values has already been fixed.

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -46,7 +46,7 @@ tokenize TokenNgram "Fulltext Search" --output_style simple
 ]
 ```
 
-#### Clarified `X / negative value` and `X / float negative value` semantics
+#### Clarified `X / negative value` semantics
 
 Previously, only dividing `X` by `-1`/`1.0` returns `-X` for unsigned integers.
 From this release, dividing by any negative value will yield the mathematically
