--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -35,11 +35,11 @@ msgstr "{ref}`tokenize-output-style`オプションを{doc}`/reference/commands/
 msgid "Here is example of using {ref}`tokenize-output-style` option."
 msgstr "以下は {ref}`tokenize-output-style`オプション使用例です。"
 
-msgid "Clarified `X / negative value` and `X / float negative value` semantics"
-msgstr "`X / 負の値` および`X / 浮動小数点負の値`のセマンティクスを明確にした"
+msgid "Clarified `X / negative value` semantics"
+msgstr "`X / 負の整数`のセマンティクスを明確にした"
 
 msgid "Previously, only dividing `X` by `-1`/`1.0` returns `-X` for unsigned integers. From this release, dividing by any negative value will yield the mathematically expected negative result as follows."
-msgstr "これまでは、符号なし整数`X`を`-1`または`-1.0`で割った場合のみ`-X`を返すようにしていました。今回のリリース以降は任意の負の値で割った際にも数学的に期待される負の結果を返すようになります。"
+msgstr "これまでは、符号なし整数`X`を`-1`または`-1.0`で割った場合のみ`-X`を返すようにしていました。今回のリリース以降は任意の負の整数で割った際にも数学的に期待される負の結果を返すようになります。"
 
 msgid "Before: `X / -2` might not return `-(X / 2)`."
 msgstr "変更前： `X / -2`は必ずしも`-(X / 2)`を返すとは限りませんでした。"
