package: update version info to 15.0.9 (2025-05-08)

--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.9-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Abe Tomoaki <abe@clear-code.com>  Thu, 08 May 2025 09:44:19 -0000
+
 groonga (15.0.8-1) unstable; urgency=low
 
   * New upstream release.
